--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@
 # description: >- # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
-#   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# #   Google search results) and in your feed.xml site description.
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -50,6 +50,7 @@ theme: jekyll-theme-minimal
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
+name: Intel-PA landing site
+title: null
 plugins:
   - jemoji
